--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -2,8 +2,8 @@
   "name": "frontend",
   "private": true,
   "scripts": {
-	"build": "tailwindcss -i ./main.css -o ../resources/static/main.css",
-    "watch": "tailwindcss -i ./main.css --watch"
+    "build": "tailwindcss -i ./main.css -o ../resources/static/app.css",
+    "watch": "tailwindcss -i ./main.css -o ../resources/static/app.css --watch --no-clear"
   },
   "devDependencies": {
     "tailwindcss": "^3.2.2"
